--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mappedin/react-sdk": "^6.0.1-beta.2",
+    "convex": "^1.16.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
